# arc2proxy-gui

./: Cargo.toml
src/: index.html  main.rs  models.js  styles.css  view.html  view.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
